# project-snake-test

./: CMakeLists.txt  README.md  client.c  client_linux.c  client_win.c  server.c  server_linux.c  server_win.c  share.c  share.h
.cache/clangd/index/: client.c.2DD7F0FFE3138CA5.idx  server.c.7CD84843027A2008.idx  share.c.EDCE8C569ED40682.idx  share.h.72BEC986B5789F5A.idx
